INCLUDE_DIRECTORIES(${webrtc_SOURCE_DIR}
					${webrtc_SOURCE_DIR}/src
					${webrtc_SOURCE_DIR}/thirdparty/libyuv/include)
IF(APPLE)
INCLUDE_DIRECTORIES(${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes
					${webrtc_SOURCE_DIR}/src/webrtc/sdkobjc/Framework/Headers
					)
					
LIST(APPEND RTC_SDK_SOURCES
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/NSString+StdString.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/NSString+StdString.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCDispatcher.m
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCFieldTrials.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCLogging.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMetrics.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMetricsSampleInfo+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMetricsSampleInfo.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCSSLAdapter.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCTracing.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCDispatcher.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCFieldTrials.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCLogging.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMacros.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMetrics.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMetricsSampleInfo.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCSSLAdapter.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCTracing.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCAVFoundationVideoCapturerInternal.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCAVFoundationVideoCapturerInternal.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCAVFoundationVideoSource+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCAVFoundationVideoSource.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCAudioSource+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCAudioSource.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCAudioTrack+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCAudioTrack.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCConfiguration+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCConfiguration.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCDataChannel+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCDataChannel.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCDataChannelConfiguration+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCDataChannelConfiguration.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCI420Shader.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCIceCandidate+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCIceCandidate.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCIceServer+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCIceServer.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCLegacyStatsReport+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCLegacyStatsReport.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMediaConstraints+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMediaConstraints.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMediaSource+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMediaSource.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMediaStream+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMediaStream.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMediaStreamTrack+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCMediaStreamTrack.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCOpenGLDefines.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCOpenGLVideoRenderer.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCOpenGLVideoRenderer.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCPeerConnection+DataChannel.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCPeerConnection+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCPeerConnection+Stats.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCPeerConnection.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCPeerConnectionFactory+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCPeerConnectionFactory.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCRtpCodecParameters+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCRtpCodecParameters.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCRtpEncodingParameters+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCRtpEncodingParameters.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCRtpParameters+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCRtpParameters.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCRtpReceiver+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCRtpReceiver.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCRtpSender+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCRtpSender.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCSessionDescription+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCSessionDescription.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCShader+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCShader.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCShader.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCVideoFrame+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCVideoFrame.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCVideoRendererAdapter+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCVideoRendererAdapter.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCVideoRendererAdapter.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCVideoSource+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCVideoSource.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCVideoTrack+Private.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCVideoTrack.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/avfoundationformatmapper.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/avfoundationformatmapper.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/avfoundationvideocapturer.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/avfoundationvideocapturer.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/videotoolboxvideocodecfactory.cc
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/videotoolboxvideocodecfactory.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCAVFoundationVideoSource.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCAudioSource.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCAudioTrack.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCConfiguration.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCDataChannel.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCDataChannelConfiguration.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCIceCandidate.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCIceServer.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCLegacyStatsReport.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMediaConstraints.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMediaSource.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMediaStream.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMediaStreamTrack.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCPeerConnection.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCPeerConnectionFactory.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCRtpCodecParameters.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCRtpEncodingParameters.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCRtpParameters.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCRtpReceiver.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCRtpSender.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCSessionDescription.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCVideoFrame.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCVideoRenderer.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCVideoSource.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCVideoTrack.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/h264_video_toolbox_decoder.cc
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/h264_video_toolbox_decoder.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/h264_video_toolbox_encoder.h
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/h264_video_toolbox_encoder.mm
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/h264_video_toolbox_nalu.cc
			${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/h264_video_toolbox_nalu.h
	  )
	IF(RTC_BUILD_IOS)
		LIST(APPEND RTC_SDK_SOURCES
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCCameraPreviewView.m
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCUIApplication.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCUIApplication.mm
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/UIDevice+RTCDevice.mm
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/helpers.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/helpers.mm
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCCameraPreviewView.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/UIDevice+RTCDevice.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCEAGLVideoView.m
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCNativeNV12Shader.mm
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCEAGLVideoView.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCAVFoundationVideoSource.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCAudioSource.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCAudioTrack.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCCameraPreviewView.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCConfiguration.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCDataChannel.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCDataChannelConfiguration.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCDispatcher.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCEAGLVideoView.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCFieldTrials.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCIceCandidate.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCIceServer.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCLegacyStatsReport.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCLogging.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMacros.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMediaConstraints.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMediaSource.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMediaStream.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMediaStreamTrack.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMetrics.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCMetricsSampleInfo.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCPeerConnection.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCPeerConnectionFactory.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCRtpCodecParameters.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCRtpEncodingParameters.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCRtpParameters.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCRtpReceiver.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCRtpSender.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCSSLAdapter.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCSessionDescription.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCTracing.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCVideoFrame.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCVideoRenderer.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCVideoSource.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCVideoTrack.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/UIDevice+RTCDevice.h
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/WebRTC.h
		)
	ELSE()
		LIST(APPEND RTC_SDK_SOURCES
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Classes/RTCNSGLVideoView.m
					${webrtc_SOURCE_DIR}/src/webrtc/sdk/objc/Framework/Headers/WebRTC/RTCNSGLVideoView.h
		)
	ENDIF(RTC_BUILD_IOS)
ENDIF(APPLE)

IF(ANDROID)
	LIST(APPEND RTC_SDK_SOURCES
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/androidhistogram_jni.cc
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/androidmediacodeccommon.h
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/androidmediadecoder_jni.cc
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/androidmediadecoder_jni.h
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/androidmediaencoder_jni.cc
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/androidmediaencoder_jni.h
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/androidmetrics_jni.cc
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/androidnetworkmonitor_jni.cc
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/androidnetworkmonitor_jni.h
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/classreferenceholder.cc
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/classreferenceholder.h
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/jni_helpers.cc
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/jni_helpers.h
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/native_handle_impl.cc
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/native_handle_impl.h
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/surfacetexturehelper_jni.cc
				${webrtc_SOURCE_DIR}/src/webrtc/sdk/android/src/jni/surfacetexturehelper_jni.h
		)

ENDIF(ANDROID)

ADD_LIBRARY(rtc_sdk STATIC ${RTC_SDK_SOURCES})
SET_TARGET_PROPERTIES(rtc_sdk PROPERTIES FOLDER "webrtc")